@@ -4,7 +4,8 @@ Summary of important user-visible changes for Windows 1.3.1+
 
  ** added conversion of arrays of double and char, add unsigned conversions
 
- ** bugfix winqueryreg root prefix check
+ ** bugfix winqueryreg root prefix check and expanded to convert to
+    octave type similar to octave core function
 
 Summary of important user-visible changes for Windows 1.3.1
 ------------------------------------------------------------
